fluxcd/infrastructure/configs/overlays/production/istio-policies/hyrule-castle/allow-jfrog-artifactory-jcr-to-jfrog-artifactory-postgres.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: allow-jfrog-artifactory-jcr-to-jfrog-artifactory-postgres
spec:
  selector:
    matchLabels:
      app: jfrog-artifactory-postgres
  action: ALLOW
  rules:
    - from:
        - source:
            principals:
              - cluster.local/ns/hyrule-castle/sa/jfrog-artifactory-jcr
      to:
        - operation:
            ports: ["5432"]
